# sheetDSL

./: .gitignore  CHANGELOG.md  README.md  basic.dxl  examplDSL.txt  newSyntax.txt  notes.txt  sheetDSL.cabal  test.dxl
src/: Main.hs  Untitled-1.json
src/Excel/: Accounting.hs  Basics.hs  Finance.hs  In_.hs  Type.hs
src/FIleReading/Excel/: Get.hs
src/Interpreter/: Dispatch.hs  Eval.hs  Parser.hs  Pretty.hs  Type.hs
src/Interpreter/old/: OldParser.hs  Parser.hs  Type.hs
src/Parser/: Parser.hs  Types.hs
src/excel/: Accounting.hs  Basics.hs
src/parser/: Parser.hs
