cabal-version:              3.0

name:                       sheetDSL

version:                    0.1.0.0

synopsis:                   A domain specific language for (currently and probably only) excel

license:                    GPL-3.0-or-later

license-file:               LICENSE

author:                     codrx

maintainer:                 codrx

category:                   Control

build-type:                 Simple

extra-doc-files:            CHANGELOG.md

common lang
    default-language:       Haskell2010

common warnings
    ghc-options:            -Wall

common deps
    build-depends:          base            ^>=     4.17.2.1
                        ,   xlsx            ^>=     1.1.2.2
                        ,   megaparsec
                        ,   bytestring      >=      0.10.8.0
                        ,   lens            >=      3.8         &&      <       5.4 
                        ,   time            >=      1.4.0.1
                        ,   text
                        ,   containers
                        ,   mtl

                    -- Fix Versionsp; currently random

library
    import:                 lang
                        ,   deps
                        ,   warnings

    hs-source-dirs:         src

    exposed-modules:        Parser.Paser
                        ,   Excel.Basics
                        ,   Excel.Accounting
                        ,   Excel.Finance

executable sheetDSL
    import:                 lang
                        ,   deps
                        ,   warnings

    hs-source-dirs:         src

    main-is:                Main.hs

    other-modules:          Excel.Basics
                        ,   Excel.Accounting
                        ,   Excel.Finance


