cabal-version:              3.0

name:                       sheetDSL

version:                    0.1.0.0

synopsis:                   A domain specific language for (currently and probably only) excel

license:                    GPL-3.0-or-later

license-file:               LICENSE

author:                     codrx

maintainer:                 codrx

category:                   Control

build-type:                 Simple

extra-doc-files:            CHANGELOG.md

common lang
    default-language:       Haskell2010

common warnings
    ghc-options:            -Wall

common deps
    build-depends:          base
                        ,   xlsx            ^>=     1.1.2.2
                        ,   megaparsec
                        ,   bytestring      >=      0.10.8.0
                        ,   lens            >=      3.8         &&      <       5.4 
                        ,   time            >=      1.4.0.1
                        ,   filepath
                        ,   text
                        ,   containers
                        ,   mtl
                        ,   template-haskell
                        ,   data-default

                    -- Fix Versionsp; currently random

library
    import:                 lang
                        ,   deps
                        ,   warnings

    hs-source-dirs:         src

    exposed-modules:        Excel.Basics
                        ,   Excel.Accounting
                        ,   Excel.Finance
                        ,   Excel.Type


executable sheetDSL
    import:                 lang
                        ,   deps
                        ,   warnings

    hs-source-dirs:         src

    main-is:                Main.hs

    other-modules:          Interpreter.Eval
                        ,   Interpreter.Parser
                        ,   Interpreter.Dispatch
                        ,   Interpreter.Type
                        ,   Excel.Basics
                        ,   Excel.Accounting
                        ,   Excel.Finance
                        ,   Excel.Type



test-suite test_excel
    type: exitcode-stdio-1.0

    main-is: Test.hs

    hs-source-dirs: tests

    ghc-options: -Wall

    other-modules:

    build-depends:

    default-language: Haskell2010